[package]
name = "merkle_whitelist_token_sale"
version = "0.1.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
borsh = "1.5.1"
bytemuck = "1.16.1"
hex = "0.4.3"
merkletreers = "1.2.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
sha256 = "1.5.0"
shank = "0.4.2"
solana-program = "=2.0.2"
spl-discriminator = "0.3.0"
spl-token = { version="6.0.0", features=[ "no-entrypoint" ] }
thiserror = "1.0.61"

[lib]
name="merkle_whitelist_token_sale"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=2.0.2"
solana-program-test = "=2.0.2"
solana-sdk = "=2.0.2"
spl-discriminator = "0.3.0"
borsh = "1.5.1"
